# sicp-rust

./: .gitignore  AGENTS.md  Makefile  README.md  batch-prettify-node.js  batch-prettify.js  create_metafiles.rb  ex-fig-ref.pl  exercises.texi  figures.texi  get-math.js  glossaries.md  index.in.xhtml  justfile  put-math.js  sicp-pocket.texi
html/: 1_002e1.xhtml  1_002e2.xhtml  1_002e3.xhtml  2_002e1.xhtml  2_002e2.xhtml  2_002e3.xhtml  2_002e4.xhtml  2_002e5.xhtml  3_002e1.xhtml  3_002e2.xhtml  3_002e3.xhtml  3_002e4.xhtml  3_002e5.xhtml  4_002e1.xhtml  4_002e2.xhtml  4_002e3.xhtml  4_002e4.xhtml  5_002e1.xhtml  5_002e2.xhtml  5_002e3.xhtml  5_002e4.xhtml  5_002e5.xhtml  Acknowledgments.xhtml  Chapter-1.xhtml  Chapter-2.xhtml  Chapter-3.xhtml  Chapter-4.xhtml  Chapter-5.xhtml  Colophon.xhtml  Dedication.xhtml  Exercises.xhtml  Figures.xhtml  Foreword.xhtml  Preface-1e.xhtml  Preface.xhtml  References.xhtml  Term-Index.xhtml  UTF.xhtml  index.xhtml
html/css/: prettify.css  style.css
html/css/fonts/: fonts.css
html/js/: browsertest.js  footnotes.js  jquery.min.js
html/js/highlight/: lang-lisp.js  lang-rust.js  prettify.js
lib/Texinfo/Convert/: HTML.pm
rust-examples/: Cargo.toml
rust-examples/chapter1/: Cargo.toml
rust-examples/chapter1/src/: lib.rs  section_1_1.rs  section_1_2.rs  section_1_3.rs
rust-examples/chapter2/: Cargo.toml
rust-examples/chapter2/examples/: section_2_5_demo.rs
rust-examples/chapter2/src/: lib.rs  section_2_1.rs  section_2_2.rs  section_2_3.rs  section_2_4.rs  section_2_5.rs
rust-examples/chapter3/: Cargo.toml  SECTION_3_3_SUMMARY.md  STREAMS_GUIDE.md
rust-examples/chapter3/examples/: streams_demo.rs
rust-examples/chapter3/src/: lib.rs  section_3_1.rs  section_3_2.rs  section_3_3.rs  section_3_4.rs  section_3_5.rs
rust-examples/chapter4/: Cargo.toml
rust-examples/chapter4/examples/: metacircular_evaluator.rs
rust-examples/chapter4/src/: lib.rs  section_4_1.rs  section_4_2.rs  section_4_3.rs  section_4_4.rs
rust-examples/chapter5/: Cargo.toml
rust-examples/chapter5/src/: lib.rs  section_5_1.rs  section_5_2.rs  section_5_3.rs  section_5_4.rs  section_5_5.rs
rust-examples/sicp-common/: Cargo.toml
rust-examples/sicp-common/src/: arena.rs  environment.rs  lib.rs  list.rs
