[workspace]
members = ["chapter1", "chapter2", "chapter3", "chapter4", "chapter5"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "CC-BY-SA-4.0"
authors = ["SICP Rust Contributors"]
repository = "https://github.com/openbook-kr/sicp-rust"

[workspace.dependencies]
# Numeric operations (rational numbers, big integers)
num = "0.4"
num-rational = "0.4"
num-bigint = "0.4"

# Lazy evaluation patterns
once_cell = "1.19"
lazy_static = "1.4"

# Property-based testing
proptest = "1.4"

# Serialization (for Chapter 2 symbolic data)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (for Chapter 3 streams)
tokio = { version = "1", features = ["full"] }

# Interior mutability helpers
parking_lot = "0.12"
