[workspace]
resolver = "2"
members = [
  "chapter1",
  "chapter2",
  "chapter3",
  "chapter4",
  "chapter5",
  "sicp-common"
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/openbook-kr/sicp-rust"
license = "CC-BY-SA-4.0"

[workspace.dependencies]
# Persistent/immutable data structures
im = "15.1.0"
lazy_static = "1.5.0"
# Numeric operations (rational numbers, big integers)
num = "0.4.3"
num-bigint = "0.4.6"
num-rational = "0.4.2"
# Lazy evaluation patterns
once_cell = "1.21.3"
# Interior mutability helpers
parking_lot = "0.12.5"
# Property-based testing
proptest = "1.9.0"
# Serialization (for Chapter 2 symbolic data)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Shared SICP utilities
sicp-common = { path = "sicp-common" }
# Async runtime (for Chapter 3 streams)
tokio = { version = "1", features = ["full"] }
