[package]
name = "sicp-chapter1"
version = "0.1.0"
description = "SICP Chapter 1: Building Abstractions with Procedures"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
num.workspace = true
num-rational.workspace = true

[dev-dependencies]
proptest.workspace = true
