[package]
name = "sicp-chapter1"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SICP Chapter 1: Building Abstractions with Procedures"

[dependencies]
num.workspace = true
num-rational.workspace = true

[dev-dependencies]
proptest.workspace = true
