[package]
name = "sicp-chapter2"
version = "0.1.0"
description = "SICP Chapter 2: Building Abstractions with Data"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
num.workspace = true
num-rational.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
