[package]
name = "sicp-chapter2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SICP Chapter 2: Building Abstractions with Data"

[dependencies]
num.workspace = true
num-rational.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
