[package]
name = "sicp-chapter2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SICP 2장: 데이터를 이용한 추상화 구축"

[dependencies]
num.workspace = true
num-rational.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
