[package]
name = "sicp-chapter3"
version = "0.1.0"
description = "SICP Chapter 3: Modularity, Objects, and State"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
