[package]
name = "sicp-chapter3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SICP Chapter 3: Modularity, Objects, and State"

[dependencies]
parking_lot.workspace = true
sicp-common.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
