[package]
name = "sicp-chapter3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SICP 3장: 모듈성, 객체, 그리고 상태"

[dependencies]
parking_lot.workspace = true
sicp-common.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
