[package]
name = "sicp-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared utilities for SICP Rust examples: arena allocation, persistent environments, functional patterns"

[dependencies]
im = "15.1"

[dev-dependencies]
proptest.workspace = true
